--- a/deploy/stack.yml
+++ b/deploy/stack.yml
@@ -284,8 +284,8 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties: 
       Code:
-        S3Bucket: 'codepipeline-codedeploy-example-lambda'
-        S3Key: 'v2.zip'
+        S3Bucket: 'codepipeline-codedeploy-lambda'
+        S3Key: 'index.zip'
       FunctionName: 'codepipeline_http_test'
       Handler: 'index.handler'
       MemorySize: 128
